src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

.menu {
  position: relative;
  padding: 1px 18px 17px;
  margin: 0 -20px;
  border-bottom: 2px solid #eee;
  margin-bottom: 20px;
}

.menu > * {
  display: inline-block;
}
.menu > * + * {
  margin-left: 15px;
}

.icon {
  font-size: 18px;
  vertical-align: text-bottom;
}

table {
  width: 100%;
}

table,
td {
  border: 1px solid gray;
  border-collapse: collapse;
  padding: 12px;
}

.modal {
  position: absolute;
  display: flex;
  width: 100%;
  z-index: 100;
  justify-content: center;
  margin-top: -200px;
}

.modal-content {
  display: flex;
  flex-direction: column;
  background-color: #686868;
  border-radius: 8px;
  transition: all 0.75s;
  padding: 8px;
  flex-shrink: 1;
  box-shadow: 0px 0px 24px 0px rgb(0 0 0 / 50%);
  flex-basis: 300px;
}

.modal-header,
.modal-body,
.modal-footer {
  padding: 8px;
}

.modal-header h4 {
  margin: 8px 0;
}

.modal-footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.form-field-group {
  display: flex;
  flex-direction: column;
}

.form-field {
  display: flex;
  flex-direction: column;
  margin-bottom: 16px;
}

label {
  font-size: 0.9rem;
}

input {
  padding: 8px 12px;
  outline: transparent;
  border-radius: 8px;
  border-style: solid;
  border: 1px solid #686868;
}
input:focus {
  border-color: #e0e2e7;
}

button.secondary {
  background-color: gray;
}
button.secondary:hover {
  background-color: rgb(149, 149, 149);
  border-color: rgb(87, 87, 87);
}

.spacer {
  height: 24px;
}

